Fixed navbar logo on narrow viewports

--- a/stylus/overrides.styl
+++ b/stylus/overrides.styl
@@ -32,8 +32,9 @@ strong
 
 // Navbar
 
-.navbar > .container-fluid .navbar-logo
-  margin-left: -15px
+@media (min-width $grid-float-breakpoint)
+  .navbar > .container-fluid .navbar-logo
+    margin-left: -15px
 
 .navbar-nav > li.navbar-logo > a
   padding: 0
